@@ -1,3 +1,8 @@
+2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
+
+	* src/Alarm.cs: Do not crash when the Alarm thread is interrupted.
+	* configure.ac: Update to version 0.3.2
+
 2008-01-19  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
 
 	Version 0.3.1 released.
